# flower_classifier

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  batch_predictions.json  final_batch_results.json  final_test_results.json  pyproject.toml  test_prediction.json
.dvc/: config
configs/: data.yaml  model.yaml  test_train.yaml  train.yaml
data/: raw.dvc
flower_classifier/: utils.py
flower_classifier/data/: dataset.py  download_data.py
flower_classifier/inference/: batch_predict.py  predict.py
flower_classifier/models/: flower_model.py
flower_classifier/production/: convert_to_onnx.py  tensorrt_inference.py
flower_classifier/serving/: __init__.py  fastapi_server.py  mlflow_server.py  run_server.py
flower_classifier/training/: train.py
mlruns/0/: meta.yaml
mlruns/410973275979575099/: meta.yaml
mlruns/410973275979575099/77707fc6937749ae9ac0dcdd175aeed9/: meta.yaml
mlruns/410973275979575099/77707fc6937749ae9ac0dcdd175aeed9/metrics/: epoch  test_accuracy  test_classification_loss  test_contrastive_loss  test_f1  test_loss  train_accuracy  train_classification_loss  train_contrastive_loss  train_f1  train_loss  val_accuracy  val_classification_loss  val_contrastive_loss  val_f1  val_loss
mlruns/410973275979575099/77707fc6937749ae9ac0dcdd175aeed9/params/: model_name
mlruns/410973275979575099/77707fc6937749ae9ac0dcdd175aeed9/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
outputs/2025-06-07/17-02-14/.hydra/: config.yaml  hydra.yaml
outputs/2025-06-07/17-02-36/.hydra/: config.yaml  hydra.yaml
scripts/: convert_to_tensorrt.sh
training/: train.py
